--- a/roles/functions/tasks/debian.yml
+++ b/roles/functions/tasks/debian.yml
@@ -46,9 +46,9 @@
     dest: ~{{ macbook_user.stdout }}/.zsh/tokens.zsh
     force: no
 
-- name: create trial file for new aliases if one doesn't already exist
+- name: create trial file for new functions if one doesn't already exist
   copy:
-    content: "tinker(){\n  echo try out new aliases here, not in main file\n}"
+    content: "tinker(){\n  echo try out new functions here, not in main file\n}"
     dest: ~{{ macbook_user.stdout }}/.zsh/_trialling.zsh
     force: no
 
