--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install Ansible
         run: pip install ansible
@@ -43,6 +43,6 @@ jobs:
       - name: runs the newcomputer target with vars to bypass prompt
         run: ansible-playbook newcomputer.yml -i hosts -e "target=dox.io37.ch" -e "user=deploy" -e "group=debian"
 
-      - name: source zshrc & run functions
-        run: source ~/.zshrc && functions
+      - name: source zshrc & run main functions
+        run: source ~/.zshrc && run_all_functions
         shell: zsh {0}
