--- a/sites/vars.yml
+++ b/sites/vars.yml
@@ -21,12 +21,12 @@
 
     - name: Create vars folder for new target
       file:
-        path: "../host_vars/{{ site }}"
+        path: "host_vars/{{ site }}"
         state: directory
       when: site_path.stat.exists == true
 
     - name: Create main vars yml for target
       copy:
         content: "ansible_user: {{ user }}"
-        dest: "../host_vars/{{ site }}/vars.yml"
+        dest: "host_vars/{{ site }}/vars.yml"
       when: site_path.stat.exists == true
