wip: parking this here for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,15 @@ jobs:
       - name: Run the newsite target with vars to bypass prompt
         run: ansible-playbook newsite.yml -i hosts -e "app_name="yes.mate"
 
+      - name: random step
+        run: ls sites
+
+      - name: cd and make
+        run: cat sites/makefiles/yes.mate
+
+      - name: no really
+        run: cd sites && make
+
       - name: source zshrc & run main functions
         run: source ~/.zshrc && run_all_functions
         shell: zsh {0}
