fix: make 404 page location a variable
allows for custom 404s per site, with generic location as fallback

--- a/files/nginx/errors.conf
+++ b/files/nginx/errors.conf
@@ -1,12 +1,15 @@
 error_page 403 /403.html;
 error_page 404 405 /404.html;
 error_page 500 501 502 503 /503.html;
+
 location = /403.html {
-  root html;
+  root $error_root;
 }
+
 location = /404.html {
-  root html;
+  root $error_root;
 }
+
 location = /503.html {
-  root html;
+  root $error_root;
 }
