--- a/newsite.yml
+++ b/newsite.yml
@@ -2,44 +2,90 @@
 - hosts: localhost
   connection: local
 
+  vars:
+    target_dir: "{{ sites_dir | default(playbook_dir + '/../sites') }}"
+    repo_url: "{{ nginx_repo | default('git@github.com:cerico/nginx-files.git') }}"
+    branch_name: "{{ git_branch | default('main') }}"
+
   vars_prompt:
     - name: app_name
       prompt: "Enter url of new site"
       private: false
+
   tasks:
+    - name: Ensure target_dir exists
+      file:
+        path: "{{ target_dir }}"
+        state: directory
+        mode: "0755"
+
+    - name: Clone repository if not already cloned
+      git:
+        repo: "{{ repo_url }}"
+        dest: "{{ target_dir }}"
+        version: "{{ branch_name }}"
+        update: no
+
+    - name: Pull latest changes from repository
+      git:
+        repo: "{{ repo_url }}"
+        dest: "{{ target_dir }}"
+        version: "{{ branch_name }}"
+        update: yes
+
     - name: Create main yml
       template:
         src: template.yml.j2
-        dest: "{{ playbook_dir }}/sites/{{ app_name }}.yml"
+        dest: "{{ target_dir }}/{{ app_name }}.yml"
+
+    - name: Ensure files directory in target_dir exists
+      file:
+        path: "{{ target_dir }}/files"
+        state: directory
+        mode: "0755"
+
     - name: Create nginx template
       template:
         src: template.nginx.conf.j2
-        dest: "{{ playbook_dir }}/sites/files/{{ app_name }}.nginx.conf"
+        dest: "{{ target_dir }}/files/{{ app_name }}.nginx.conf"
+
+    - name: Ensure makefiles directory in target_dir exists
+      file:
+        path: "{{ target_dir }}/makefiles"
+        state: directory
+        mode: "0755"
+
     - name: append to makefile.
       template:
-        dest: "{{ playbook_dir }}/sites/makefiles/{{ app_name }}"
+        dest: "{{ target_dir }}/makefiles/{{ app_name }}"
         src: Makefile.j2
 
     - name: Create site/hosts file if doesnt exist
       ansible.builtin.copy:
         content: "[sites]\n"
-        dest: "{{ playbook_dir }}/sites/hosts"
+        dest: "{{ target_dir }}/hosts"
         force: false
 
     - name: Add target to inventory file.
       ansible.builtin.lineinfile:
-        path: "{{ playbook_dir }}/sites/hosts"
+        path: "{{ target_dir }}/hosts"
         line: "{{ app_name }}"
         insertafter: "\\[sites\\]"
 
     - name: Create default site vars directory if doesnt exist
       file:
         state: directory
-        path: "{{ playbook_dir }}/sites/group_vars/sites"
+        path: "{{ target_dir }}/group_vars/sites"
         force: false
+
+    - name: Ensure group_vars/sites directory in target_dir exists
+      file:
+        path: "{{ target_dir }}/group_vars/sites"
+        state: directory
+        mode: "0755"
 
     - name: Create default site vars if doesnt exit
       copy:
         content: "ansible_user: deploy"
-        dest: "{{ playbook_dir }}/sites/group_vars/sites/default.yml"
+        dest: "{{ target_dir }}/group_vars/sites/default.yml"
         force: false
