fix: only look for brew location when darwin

--- a/roles/whoami/tasks/main.yml
+++ b/roles/whoami/tasks/main.yml
@@ -26,6 +26,7 @@
   become: false
   ansible.builtin.command: which brew
   register: brew_location
+  when: ansible_os_family == "Darwin"
 
 - debug: var=brew_location.stdout
 
