feat: install rebornix.ruby vscode extension

--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -35,6 +35,7 @@
     - "teabyii.ayu"
     - "tristanremy.mirage"
     - "wingrunr21.vscode-ruby"
+    - "rebornix.ruby"
     - "wraith13.unsaved-files-vscode"
     - "aaron-bond.better-comments"
     - "eamodio.gitlens"
