--- a/roles/functions/tasks/git.yml
+++ b/roles/functions/tasks/git.yml
@@ -30,6 +30,12 @@
     dest: ~{{ macbook_user.stdout }}/.config/git/hooks/post-receive
     mode: a+x
 
+- name: Copy global post-checkout hook
+  copy:
+    src: git/post-checkout
+    dest: ~{{ macbook_user.stdout }}/.config/git/hooks/post-checkout
+    mode: a+x
+
 - name: Copy global commit-msg hook
   copy:
     src: git/commit-msg
