--- a/roles/install/tasks/darwin.yml
+++ b/roles/install/tasks/darwin.yml
@@ -1,15 +1,4 @@
 ---
-- name: install homebrew taps
-  become: true
-  become_user: "{{ brew_user.stdout }}"
-  homebrew_tap:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - "homebrew/core"
-    - "homebrew/services"
-    - "homebrew/cask"
-
 - name: install core packages
   become: true
   become_user: "{{ brew_user.stdout }}"
@@ -48,7 +37,9 @@
       "htop",
       "tmux",
       "postgresql",
-      "redis"
+      "redis",
+      "pkg-config",
+      "pixman"
     ]
     state: present
 
