feat: update macfair for silicon
  - Add chpasswd hook to update terminal profile on directory entry
  - Remove deprecated homebrew taps
  - Replace youtube-dl with yt-dlp
  - Update hardcoded /usr/local paths to /opt/homebrew for Apple Silicon
  - Update node version from 18 to 22
  - Remove dockutil dependency and dock management tasks
  - Configure iTerm profiles to reuse current directory for new tabs
  - Clean up VSCode extensions and formatting

--- a/roles/functions/tasks/dnsmasq.yml
+++ b/roles/functions/tasks/dnsmasq.yml
@@ -1,12 +1,12 @@
 - name: Add yay domain to dnsmasq.conf
   lineinfile:
-    path: "/usr/local/etc/dnsmasq.conf"
+    path: "/opt/homebrew/etc/dnsmasq.conf"
     line:  "address=/.{{ item.domain }}/{{ item.ip }}"
     insertbefore: EOF
   with_items: "{{ local_domains }}"
 
 - name: Find dnsmasq plist file
-  ansible.builtin.command: find /usr/local/Cellar -name homebrew.mxcl.dnsmasq.plist
+  ansible.builtin.command: find /opt/homebrew/Cellar -name homebrew.mxcl.dnsmasq.plist
   register: dnsmasq_plist
 
 - name: Print dnsmasq plist file path
