--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -1,6 +1,14 @@
 ---
+- name: Get list of installed VS Code extensions
+  shell: code --list-extensions
+  register: installed_extensions
+  changed_when: false
+  when: ansible_os_family == "Darwin"
+
 - name: install VSCode packages
   shell: "code --install-extension {{ item }}"
+  loop_control:
+    pause: 2  # 2 second delay between each extension
   with_items:
     - "GitHub.copilot"
     - "GitHub.vscode-pull-request-github"
@@ -10,7 +18,6 @@
     - "aregghazaryan.glass-ui"
     - "gerane.Theme-zombiesatemyneighbors"
     - "jmsv.JavaScriptSnippetsStandard"
-    - "tinkertrain.theme-panda"
     - "johnpapa.vscode-peacock"
     - "juhakokkonen.py-light"
     - "unifiedjs.vscode-mdx"
@@ -35,7 +42,9 @@
     - "ChakrounAnas.turbo-console-log"
     - "humao.rest-client"
     - "wholroyd.jinja"
-  when: ansible_os_family == "Darwin"
+  when:
+    - ansible_os_family == "Darwin"
+    - item not in installed_extensions.stdout_lines
 
 - name: copy vscode profile darwin
   copy:
